Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 </head>
- <body><a href="https://flatironschool.com/">Flatiron School</a>
+<body>
+ <ul><a href="https://flatironschool.com/">Flatiron School</a></ul>
  </body>
 </html>
