Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <!-- Write your HTML in this file -->
 <html>
-<head>
-</head>
+<head></head>
 <body>
- <ul><a href="https://flatironschool.com/">Flatiron School</a></ul>
+ <a href="https://flatironschool.com/">Flatiron School</a>
  </body>
 </html>
